--- a/tts_service/Dockerfile
+++ b/tts_service/Dockerfile
@@ -12,22 +12,19 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy the requirements file for this specific service
+# (Ensure you have a requirements.txt in the tts_service directory)
 COPY requirements.txt .
 
 # Install Python dependencies for this service
 RUN pip install --no-cache-dir -r requirements.txt
 
 # --- Download and Extract the Model ---
-# Create a directory for the specific model
-RUN mkdir -p /app/models/en_GB-semaine-medium
-WORKDIR /app/models/en_GB-semaine-medium
-
-# Download the two required model files directly from Hugging Face
-RUN wget https://huggingface.co/rhasspy/piper-voices/resolve/main/en/en_GB/semaine/medium/en_GB-semaine-medium.onnx
-RUN wget https://huggingface.co/rhasspy/piper-voices/resolve/main/en/en_GB/semaine/medium/en_GB-semaine-medium.onnx.json
-
-# Return to the main app directory
-WORKDIR /app
+# Create a directory for the model, download the files, and return to /app
+RUN mkdir -p /app/models/en_GB-semaine-medium && \
+    cd /app/models/en_GB-semaine-medium && \
+    wget https://huggingface.co/rhasspy/piper-voices/resolve/main/en/en_GB/semaine/medium/en_GB-semaine-medium.onnx && \
+    wget https://huggingface.co/rhasspy/piper-voices/resolve/main/en/en_GB/semaine/medium/en_GB-semaine-medium.onnx.json && \
+    cd /app
 
 # Copy the server script into the container
 COPY tts_server.py .
@@ -35,5 +32,7 @@ COPY tts_server.py .
 # Expose the port the server will run on
 EXPOSE 5001
 
-# Command to run the TTS server, explicitly pointing to the app
-CMD ["flask", "--app", "tts_server", "run", "--host=0.0.0.0", "--port=5001"]
+# --- CORRECTED COMMAND ---
+# Run the script directly with python to ensure the __main__ block is executed,
+# which contains the logic for loading SSL certificates.
+CMD ["python", "tts_server.py"]
