--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,33 @@
 services:
   app:
-    build: 
+    # Build context is the current directory '.', where the app's Dockerfile is.
+    build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
     volumes:
+      # Mount the 'data' directory from the host to '/app/data' in the container.
       - ./data:/app/data
+      # Mount the cert.pem from the host's root project directory
+      # to '/app/cert.pem' in the container.
+      - ./cert.pem:/app/cert.pem
+      # Mount the key.pem from the host's root project directory
+      # to '/app/key.pem' in the container.
+      - ./key.pem:/app/key.pem
     restart: unless-stopped
 
   tts:
+    # Build context is the './tts_service' directory, where the tts Dockerfile is.
     build: ./tts_service
     ports:
       - "5001:5001"
+    volumes:
+      # The source path './cert.pem' is still relative to the docker-compose.yml file.
+      # This mounts the cert.pem from the host's root project directory
+      # to '/app/cert.pem' inside this tts container.
+      - ./cert.pem:/app/cert.pem
+      # Mount the key.pem from the host's root project directory
+      # to '/app/key.pem' in this tts container.
+      - ./key.pem:/app/key.pem
     restart: unless-stopped
