--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,3 +1,5 @@
+# frontend/nginx.conf
+
 server {
     listen 80;
     server_name localhost;
@@ -11,11 +13,11 @@ server {
     # is redirected to index.html, allowing the Svelte router to handle it.
     location / {
         try_files $uri $uri/ /index.html;
-    }
 
-    # Optional: Improve caching for static assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires 1y;
-        add_header Cache-Control "public";
+        # Add headers to prevent caching. This is critical for development to avoid
+        # stale data issues, especially when switching protocols (HTTP->HTTPS).
+        add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+        add_header Pragma 'no-cache';
+        add_header Expires '0';
     }
 }
