--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
       - localai_net
     labels:
       - "traefik.enable=true"
-      # This makes the dashboard available at http://SERVER_IP:8080/dashboard
-      - "traefik.http.routers.dashboard.rule=HostRegexp(`{host:.+}`) && PathPrefix(`/dashboard`)"
+      # This makes the dashboard available at http://${DOMAIN_NAME}:8080/dashboard
+      - "traefik.http.routers.dashboard.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/dashboard`)"
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.entrypoints=traefik"
 
@@ -37,8 +37,7 @@ services:
       - localai_net
     labels:
       - "traefik.enable=true"
-      # This makes the frontend the default route for all traffic
-      - "traefik.http.routers.frontend.rule=HostRegexp(`{host:.+}`)"
+      - "traefik.http.routers.frontend.rule=Host(`${DOMAIN_NAME}`)"
       - "traefik.http.routers.frontend.priority=1"
       - "traefik.http.routers.frontend.entrypoints=https"
       - "traefik.http.routers.frontend.tls=true"
@@ -58,8 +57,7 @@ services:
       - localai_net
     labels:
       - "traefik.enable=true"
-      # Route requests like /api/sessions, /api/settings, etc.
-      - "traefik.http.routers.core-service.rule=HostRegexp(`{host:.+}`) && PathPrefix(`/api/sessions`, `/api/settings`, `/api/icons`)"
+      - "traefik.http.routers.core-service.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/api/sessions`, `/api/settings`, `/api/icons`)"
       - "traefik.http.routers.core-service.priority=5"
       - "traefik.http.routers.core-service.entrypoints=https"
       - "traefik.http.routers.core-service.tls=true"
@@ -79,7 +77,7 @@ services:
       - CORE_SERVICE_URL=http://core-service:8000
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.chat-service.rule=HostRegexp(`{host:.+}`) && PathPrefix(`/api/chat`)"
+      - "traefik.http.routers.chat-service.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/api/chat`)"
       - "traefik.http.routers.chat-service.priority=5"
       - "traefik.http.routers.chat-service.entrypoints=https"
       - "traefik.http.routers.chat-service.tls=true"
@@ -97,7 +95,7 @@ services:
       - localai_net
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.tts-service.rule=HostRegexp(`{host:.+}`) && PathPrefix(`/api/tts`)"
+      - "traefik.http.routers.tts-service.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/api/tts`)"
       - "traefik.http.routers.tts-service.priority=10"
       - "traefik.http.routers.tts-service.entrypoints=https"
       - "traefik.http.routers.tts-service.tls=true"
