--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,7 +100,18 @@ services:
       - "traefik.http.routers.tts-service.entrypoints=https"
       - "traefik.http.routers.tts-service.tls=true"
       - "traefik.http.services.tts-svc.loadbalancer.server.port=5001"
-
+  qdrant-db:
+    image: qdrant/qdrant:v1.14.1
+    container_name: qdrant_db
+    restart: unless-stopped
+    ports:
+      - "6333:6333" # Main REST API port
+      - "6334:6334" # gRPC port
+    volumes:
+      - ./data/qdrant_storage:/qdrant/storage:rw
+      - ./configuration/qdrant/config.yaml:/qdrant/config/production.yaml
+    networks:
+      - localai_net
 networks:
   localai_net:
     driver: bridge
