add: Introduce image generation service with Flask, Gunicorn, and Stable Diffusion XL integration
- Add `image-gen-service` microservice with Docker, Flask, and GPU support for AI image generation.
- Update `docker-compose.yml` to configure `image-gen-service` and expose necessary routes via Traefik.
- Add frontend integration: new `/image-gen` route and corresponding UI in `+layout.svelte`.
- Standardize Flask dependencies and update requirements across all services.
- Improve port configuration and Dockerfile consistency for existing services.

--- a/services/image-gen-service/Dockerfile
+++ b/services/image-gen-service/Dockerfile
@@ -22,7 +22,7 @@ COPY ./app .
 
 # Expose the port. This is good practice for documentation and allows Docker
 # to map the port dynamically if needed. It will use the value of $PORT.
-EXPOSE $PORT
+EXPOSE 5003
 
 # The CMD now uses the $PORT environment variable. This makes the Dockerfile
 # completely reusable for any service on any port.
