--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,11 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./gateway/traefik.yml:/etc/traefik/traefik.yml:ro
       - ./gateway/dynamic.yml:/etc/traefik/dynamic.yml:ro
-      - ./gateway/certs:/etc/traefik/certs:ro # Mount certificates
+      - ./gateway/certs:/etc/traefik/certs:ro
     networks:
       - localai_net
     labels:
       - "traefik.enable=true"
-      # This makes the dashboard available at http://${DOMAIN_NAME}:8080/dashboard
       - "traefik.http.routers.dashboard.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/dashboard`)"
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.entrypoints=traefik"
@@ -44,7 +43,7 @@ services:
       - "traefik.http.services.frontend-svc.loadbalancer.server.port=80"
 
   ################################
-  # CORE SERVICE (Sessions, Settings, DB)
+  # CORE SERVICE (Port: 8000)
   ################################
   core-service:
     build:
@@ -55,6 +54,8 @@ services:
       - ./data:/app/data
     networks:
       - localai_net
+    environment:
+      - PORT=8000
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.core-service.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/api/sessions`, `/api/settings`, `/api/icons`)"
@@ -64,7 +65,7 @@ services:
       - "traefik.http.services.core-svc.loadbalancer.server.port=8000"
 
   ################################
-  # CHAT SERVICE (LLM Interaction)
+  # CHAT SERVICE (Port: 5002)
   ################################
   chat-service:
     build:
@@ -74,6 +75,7 @@ services:
     networks:
       - localai_net
     environment:
+      - PORT=5002
       - CORE_SERVICE_URL=http://core-service:8000
     labels:
       - "traefik.enable=true"
@@ -81,10 +83,40 @@ services:
       - "traefik.http.routers.chat-service.priority=5"
       - "traefik.http.routers.chat-service.entrypoints=https"
       - "traefik.http.routers.chat-service.tls=true"
-      - "traefik.http.services.chat-svc.loadbalancer.server.port=8000"
+      - "traefik.http.services.chat-svc.loadbalancer.server.port=5002"
 
   ################################
-  # TTS SERVICE
+  # IMAGE GENERATION SERVICE (Port: 5003)
+  ################################
+  image-gen-service:
+    build:
+      context: ./services/image-gen-service
+    container_name: image_gen_service
+    restart: unless-stopped
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [ gpu ]
+    volumes:
+      - ./models/checkpoints:/app/checkpoints:ro
+      - ./models/loras:/app/loras:ro
+    networks:
+      - localai_net
+    environment:
+      - PORT=5003
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.image-gen-service.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/api/image`)"
+      - "traefik.http.routers.image-gen-service.priority=5"
+      - "traefik.http.routers.image-gen-service.entrypoints=https"
+      - "traefik.http.routers.image-gen-service.tls=true"
+      - "traefik.http.services.image-gen-svc.loadbalancer.server.port=5003"
+
+  ################################
+  # TTS SERVICE (Port: 5001)
   ################################
   tts-service:
     build:
@@ -93,6 +125,8 @@ services:
     restart: unless-stopped
     networks:
       - localai_net
+    environment:
+      - PORT=5001
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.tts-service.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/api/tts`)"
@@ -100,18 +134,20 @@ services:
       - "traefik.http.routers.tts-service.entrypoints=https"
       - "traefik.http.routers.tts-service.tls=true"
       - "traefik.http.services.tts-svc.loadbalancer.server.port=5001"
+
   qdrant-db:
     image: qdrant/qdrant:v1.14.1
     container_name: qdrant_db
     restart: unless-stopped
     ports:
-      - "6333:6333" # Main REST API port
-      - "6334:6334" # gRPC port
+      - "6333:6333"
+      - "6334:6334"
     volumes:
       - ./data/qdrant_storage:/qdrant/storage:rw
       - ./configuration/qdrant/config.yaml:/qdrant/config/production.yaml
     networks:
       - localai_net
+
 networks:
   localai_net:
     driver: bridge
