--- a/services/chat-services/Dockerfile
+++ b/services/chat-services/Dockerfile
@@ -14,10 +14,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY ./app .
 
 # Expose the port the service will run on
-EXPOSE 8000
+EXPOSE 5002
 
 # Use Gunicorn to run the application
 # -w 4: Use 4 worker processes. Adjust as needed.
 # -b 0.0.0.0:8000: Bind to all network interfaces on port 8000.
 # main:app: Look for the 'app' object in the 'main.py' file.
-CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "main:app"]
+CMD gunicorn -w ${WORKERS:-1} -b "0.0.0.0:$PORT" main:app
