--- a/services/core-services/Dockerfile
+++ b/services/core-services/Dockerfile
@@ -20,4 +20,4 @@ EXPOSE 8000
 # -w 4: Use 4 worker processes. Adjust as needed.
 # -b 0.0.0.0:8000: Bind to all network interfaces on port 8000.
 # main:app: Look for the 'app' object in the 'main.py' file.
-CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "main:app"]
+CMD gunicorn -w ${WORKERS:-4} -b "0.0.0.0:$PORT" main:app
